# quant-loop

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
fixtures/: minute_bars.csv
qloop/: __main__.py  cli.py
qloop/engine/: core.py  metrics.py
qloop/feeds/: fixtures.py
qloop/report/: report.py
qloop/util/: hashing.py
scripts/: demo.sh
